Added room restrictions

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -28,7 +28,7 @@ button {
 
 button:hover {
     border: none;
-    background: #1F4C69;
+    background: #cf8600;
     color: white;
     padding: 10px;
 }
