--- a/views/chat.html
+++ b/views/chat.html
@@ -9,7 +9,7 @@
 <body class="chat">
 
     <aside class="chat__sidebar">
-        <h3>Chats</h3>
+        <h3>Active Users</h3>
         <div id="users"></div>
     </aside>
 
