Saved messages to database

--- a/views/chatLogin.hbs
+++ b/views/chatLogin.hbs
@@ -18,10 +18,10 @@
             <div class="input-field col s12">
                 <select name="room">
                     <option value="" disabled selected>Choose one</option>
-                    <option value="100 Level">100 Level</option>
-                    <option value="200 Level">200 Level</option>
-                    <option value="300 Level">300 Level</option>
-                    <option value="400 Level">400 Level</option>
+                    <option value="Year One">Year One</option>
+                    <option value="Year Two">Year Two</option>
+                    <option value="Year Three">Year Three</option>
+                    <option value="Year Four">Year Four</option>
                 </select>
                 <label>Chat Group Select</label>
             </div>
