--- a/views/chatLogin.hbs
+++ b/views/chatLogin.hbs
@@ -4,8 +4,7 @@
             <a href="#" class="brand-logo">Chat App</a>
             <ul id="nav-mobile" class="right">
                 <li><a id="toChat" href="#">Dashboard</a></li>
-                <li><a id="logout" href="#">Logout</a></li>
-                <li class="tooltipped" data-tooltip="{{name}}"><span class="mdi mdi-account"></span></li>
+                <li><a id="logout" href="/users/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
