--- a/views/chatLogin.hbs
+++ b/views/chatLogin.hbs
@@ -3,8 +3,8 @@
         <div class="nav-wrapper container">
             <a href="#" class="brand-logo">Chat App</a>
             <ul id="nav-mobile" class="right">
-                <li><a id="toChat" href="#">Dashboard</a></li>
-                <li><a id="logout" href="/users/logout">Logout</a></li>
+                <li><a id="toChat" href="/users/dashboard/{{id}}"><i class="mdi mdi-layers-outline left"></i>Dashboard</a></li>
+                <li><a id="logout" href="/users/logout"><i class="mdi mdi-logout left"></i></i>Logout</a></li>
             </ul>
         </div>
     </nav>
