--- a/views/lecturerLogin.hbs
+++ b/views/lecturerLogin.hbs
@@ -21,7 +21,7 @@
         <div class="col s12 section">
             <form id="loginForm" name="loginForm" method="POST" action="/users/login">
                 <div class="center"><span class="mdi mdi-login formIcons"></span></div>
-                <h5 class="center">User Login</h5>
+                <h5 class="center">Lecturer Login</h5>
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="mdi mdi-account prefix"></i>
