--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -4,7 +4,7 @@ body {
     flex-direction: column;
 }
 
-main {
+ main {
     flex: 1 0 auto;
 }
 
@@ -41,10 +41,7 @@ h5 {
     color: #ffa500;
 }
 
-.footer-copyright {
-    margin: 0;
-}
-
-li {
-    display: inline-block;
+footer {
+    background-color: #f5f5f5;
+    padding: 30px 0 !important;
 }
