--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -41,6 +41,52 @@ h5 {
     color: #ffa500;
 }
 
+.modal {
+    padding: 0;
+}
+
+.modal-content {
+    padding: 0 !important;
+}
+
+.modal-header {
+    position: fixed;
+    top: 0;
+    background-color: #ffa500;
+    color: #ffffff;
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    z-index: 99;
+}
+
+.content {
+    margin-top: 40px;
+    /* margin-bottom: 40px; */
+    /* border: 2px solid blue; */
+    padding: 35px 60px;
+}
+.input-field input[type=text]:focus + label, input[type=email]:focus + label, input[type=password]:focus + label {
+    color: #ffa500 !important;
+}
+
+.input-field input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
+    border-bottom: 1px solid #ffa500 !important;
+    box-shadow: 0 1px 0 0 #ffa500 !important;
+}
+
+button {
+    margin-right: 25px !important;
+}
+
+.modal-footer {
+    text-align: center !important;
+}
+
+.greenToast {
+    color: #00ff00;
+}
+
 footer {
     background-color: #f5f5f5;
     padding: 30px 0 !important;
