--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
     <div>
         <div class="navbar-fixed">
             <ul id="dropdown" class="dropdown-content">
@@ -15,7 +15,7 @@
             </nav>
         </div>
     </div>
-</header>
+</header> -->
 <section id="mainContent">
     <div class="row">
         <div class="col s12 section">
