Fixed login routes

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -39,7 +39,7 @@
                 <div class="col s12">
                     <div class="input-field">
                         <div class="mdi mdi-account prefix"></div>
-                        <input value="{{username}}" type="text" id="username" name="username">
+                        <input value="{{username}}" type="text" id="username" name="studentUsername">
                         <label for="username">Username</label>
                         <span class="helper-text" data-error="Please provide a username" data-success=""></span>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="col s12">
                     <div class="input-field">
                         <span class="mdi mdi-lock prefix"></span>
-                        <input value="{{password}}" type="password" id="password" name="password">
+                        <input value="{{password}}" type="password" id="password" name="studentPassword">
                         <label for="password">Enter Password</label>
                         <span class="helper-text" data-error="Please provide a password" data-success="">Should be at least 8 characters long</span>
                     </div>
