--- a/views/chatLogin.hbs
+++ b/views/chatLogin.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav class="orange">
         <div class="nav-wrapper container">
-            <a href="#" class="brand-logo">Chat App</a>
+            <a href="/" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
             <ul id="nav-mobile" class="right">
                 <li><a id="toChat" href="/users/dashboard/{{id}}"><i class="mdi mdi-layers-outline left"></i>Dashboard</a></li>
                 <li><a id="logout" href="/users/logout"><i class="mdi mdi-logout left"></i></i>Logout</a></li>
