--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <div class="nav-wrapper container">
-            <a href="/" class="brand-logo">Chat App</a>
+            <a href="/" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
             <ul id="nav-mobile" class="right">
                 <li class="active"><a id="toChat" href="/users/dashboard/{{id}}"><i class="mdi mdi-layers-outline left"></i>Dashboard</a></li>
                 <li><a id="toChat" href="/users/{{user._id}}/joinChat"><i class="mdi mdi-comment-text-multiple-outline left"></i>Chat</a></li>
