--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
             <nav>
                 <div class="nav-wrapper container">
                     <a href="/" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
-                    <ul class="right hide-on-med-and-down">
+                    <ul class="right">
                         <li><a class="dropdown-trigger" href="#!" data-target="dropdown">Lecturer<i class="mdi mdi-menu-down right"></i></a></li>
                     </ul>
               </div>
