--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -2,13 +2,19 @@
     <nav>
         <div class="nav-wrapper container">
             <a href="/" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
-            <ul id="nav-mobile" class="right">
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="mdi mdi-menu"></i></a>
+            <ul class="right hide-on-med-and-down">
                 <li class="active"><a id="toChat" href="/users/dashboard/{{id}}"><i class="mdi mdi-layers-outline left"></i>Dashboard</a></li>
                 <li><a id="toChat" href="/users/{{user._id}}/joinChat"><i class="mdi mdi-comment-text-multiple-outline left"></i>Chat</a></li>
                 <li><a id="logout" href="/users/logout"><i class="mdi mdi-logout left"></i>Logout</a></li>
             </ul>
         </div>
     </nav>
+    <ul id="nav-mobile" class="sidenav">
+        <li class="active"><a id="toChat" href="/users/dashboard/{{id}}"><i class="mdi mdi-layers-outline left"></i>Dashboard</a></li>
+        <li><a id="toChat" href="/users/{{user._id}}/joinChat"><i class="mdi mdi-comment-text-multiple-outline left"></i>Chat</a></li>
+        <li><a id="logout" href="/users/logout"><i class="mdi mdi-logout left"></i>Logout</a></li>
+    </ul>
 </header>
 
 <main>
@@ -17,15 +23,15 @@
     </div>
 
     <div id="mainContent" class="container">
-        <div class="row">
-            <div class="col s6">
+        <div id="card-div" class="row">
+            <div class="col s12 l6">
                 <div class="card small">
                     <div class="card-content center">
                         <a href="#profileModal" class="modal-trigger"><span class="mdi mdi-account main-icons tooltipped" data-tooltip="My Profile"></span></a>
                     </div>
                 </div>
             </div>
-            <div class="col s6">
+            <div class="col l6 s12">
                 <div class="card small">
                     <div class="card-content center">
                         <a href="/users/{{user._id}}/joinChat"><span class="mdi mdi-comment-text-multiple-outline main-icons tooltipped" data-tooltip="To Chat"></span></a>
