--- a/views/lecturerSignup.hbs
+++ b/views/lecturerSignup.hbs
@@ -20,8 +20,8 @@
 
             <nav>
               <div class="nav-wrapper container">
-                <a href="/" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
-                <ul class="right hide-on-med-and-down">
+                <a href="/lecturers/register" class="brand-logo"><i class="mdi mdi-message-processing left"></i>Netty</a>
+                <ul class="right">
                     <li><a class="dropdown-trigger" href="#!" data-target="dropdown">Student<i class="mdi mdi-menu-down right"></i></a></li>
                 </ul>
               </div>
